- Emblems can now be exchanged for target points at the emblem trader in the shops area - emblem trader added to shops area - reworked the target point store - Ancient Artifacts from revenants can now be sold to the emblem trader for Coins - fixed bug where rejuvination potion wasnt cancelling overload task - all sigils should now work as intended - fixed brutal dragons hit distance for fire breathe